--- a/index.html
+++ b/index.html
@@ -111,7 +111,162 @@
       <div class="label">Rapunzel</div>
       <div class="question">Share something about this year that surprised you.</div>
     </div>
-    <!-- Add more boxes as needed with different characters and questions -->
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Hercules</div>
+      <div class="question">What is the best gift you have ever received?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Moana</div>
+      <div class="question">What is the best gift you have ever given to someone else?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Jasmine</div>
+      <div class="question">What is one thing you appreciate about yourself?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Superman</div>
+      <div class="question">What are you most proud of accomplishing this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Mulan</div>
+      <div class="question">Who inspired you the most this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Captain America</div>
+      <div class="question">What is a kind gesture someone did for you this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Belle</div>
+      <div class="question">What is one thing you learned about yourself this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">The Flash</div>
+      <div class="question">What is your favorite way to express gratitude?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Snow White</div>
+      <div class="question">What is something you are grateful for that you often take for granted?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Aladdin</div>
+      <div class="question">What is your favorite place that you visited this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Hulk</div>
+      <div class="question">What is something you are grateful for in nature?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Pocahontas</div>
+      <div class="question">Who is someone that made you smile recently?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Green Lantern</div>
+      <div class="question">What is one thing you did this year that scared you but you did it anyway?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Tinker Bell</div>
+      <div class="question">What is one thing you would like to thank yourself for?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Black Widow</div>
+      <div class="question">What is your favorite memory from a holiday this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Robin Hood</div>
+      <div class="question">What is one thing that you are grateful for in your community?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Doctor Strange</div>
+      <div class="question">What is a skill you developed this year that you are proud of?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Merida</div>
+      <div class="question">What is a way that you showed kindness to someone this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Ant-Man</div>
+      <div class="question">What is your favorite food that you had this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Peter Pan</div>
+      <div class="question">What is one thing that always makes you laugh?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Aquaman</div>
+      <div class="question">Who is someone you reconnected with this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Bambi</div>
+      <div class="question">What is something you are grateful for about your health?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Falcon</div>
+      <div class="question">What is one thing you are thankful for about your work or school?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Scarlet Witch</div>
+      <div class="question">What is your favorite song that you listened to this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Hawkeye</div>
+      <div class="question">What is a book or movie that had an impact on you this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Groot</div>
+      <div class="question">What is something you learned from a mistake this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Shrek</div>
+      <div class="question">What is one thing you are thankful for that technology has made possible?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Raphael (TMNT)</div>
+      <div class="question">What is something creative that you did this year that you are proud of?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Donatello (TMNT)</div>
+      <div class="question">What is a goal you reached this year that you are proud of?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Michelangelo (TMNT)</div>
+      <div class="question">What is something about your home that you are grateful for?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Leonardo (TMNT)</div>
+      <div class="question">What is a positive change you made this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Dumbo</div>
+      <div class="question">What is a piece of advice that helped you this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Rocket Raccoon</div>
+      <div class="question">What is one thing you are grateful for about your body?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Baloo</div>
+      <div class="question">What is something that made you feel loved this year?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Cinderella's Fairy Godmother</div>
+      <div class="question">What is one thing you are grateful for in your daily routine?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Simba</div>
+      <div class="question">What is a risk you took this year that paid off?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Jafar</div>
+      <div class="question">What is your favorite way to help others?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Hades</div>
+      <div class="question">What is something that you were worried about, but it turned out okay?</div>
+    </div>
+    <div class="box" onclick="pickBox(this)">
+      <div class="label">Maui</div>
+      <div class="question">What is something you are grateful for that happened unexpectedly?</div>
+    </div>
   </div>
 
   <script>
